src/unit_tests/TypeChecker/fail/self-let.cl
class Main inherits IO {
    main(): Int {
        {
            let self: String in 1;
        }
    };
};